--- a/templates/user.html
+++ b/templates/user.html
@@ -5,5 +5,11 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {{ name }}!</h1>
+    <p>List of things we need</p>
+    <ul>
+        {% for item in items %}
+            <li>{{ item }}</li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
